# finetune-moonshine-asr

./: .gitignore  README.md  main.py  pyproject.toml  train.py
configs/: german_base_100k.yaml  german_base_60k.yaml  german_best.yaml  german_resume_v2.yaml  mls_cv_german_no_curriculum.yaml
contexts/: HF_MODEL_CARD_README.md  IMMEDIATE_GIT_ACTIONS.md  LESSONS_LEARNED_AND_REBOOT.md  MOONSHINE_DE_FINETUNE_REPORT.md  REALWORLD_TEST_RESULTS.md  STATUS.md  issue141_findings_and_streaming_model.md  moonshine_de_context.md  reboot_strategy_first_principles.md  tokenizer_analysis_and_architecture.md
docs/: INSTALLATION.md  LIVE_MODE_GUIDE.md
moonshine_ft/: __init__.py
scripts/: create_subset.py  evaluate.py  inference.py  prepare_german_dataset.py  tokenizer_analysis.py
