[project]
name = "finetune-moonshine-asr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    "gradio>=6.10.0",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "numpy>=2.4.3",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.4",
    "optimum>=2.1.0",
    "pandas>=3.0.1",
    "pyyaml>=6.0.3",
    "schedulefree>=1.4.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pytest>=9.0.2",
]
